--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "elle",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+    "scripts":{
+        "build": "browserify src/Main.js > app.js",
+        "start": "beefy --live src/Main.js"
+    },
   "devDependencies": {
-    "watchify": "^3.7.0"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+      
   },
   "repository": {
     "type": "git",
